--- a/app/views/parents/edit.html.erb
+++ b/app/views/parents/edit.html.erb
@@ -1,1 +1,7 @@
-<h1> Edit your bookings </h1>
+<h1> Edit Parent information </h1>
+    <%= form_for @parent do |f| %>
+        Name: <%= f.text_field :name %><br />
+        Child's age : <%= f.number_field :childs_age %><br />
+ 
+    <%= f.submit %>
+<% end %> 
