--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,7 +1,11 @@
 
+<div class = "container">
+<div class = "text-center">
 <h1> Welcome to your Babysitter Website  </h1>
+<br>
 <h3><%= link_to "Are you a Parent ?", parents_path %> </h3>
 <br>
 
 <h3><%= link_to "Are you a Sitter ?", sitters_path %> </h3>
-
+</div>
+</div>
